# libiconv

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
res/: libiconv.rc
win32/: LibIconv.sln  aliases.h  config.h  iconv.def  iconv.h  libcharset.h  libiconv.vcxproj  libiconv.vcxproj.filters  localcharset.h  readme.md
win32/private/: config.h
